# karambola

./: .gitignore  CITATION.cff  CMakeLists.txt  Makefile  README  karambola.cpp  karambola.h  vcpkg.json
demo/: README.txt
lib/: CalcOptions.h  Kmath.h  MinkValResultType.cpp  MinkValResultType.h  Triangulation.cpp  Triangulation.h  Vector.h  calculate_eigensystem.cpp  calculate_eigensystem.h  check_command_line.cpp  check_command_line.h  check_surface.cpp  check_surface.h  common.h  gsleig.cpp  gsleig.h  help.cpp  help.h  readoff.cpp  readpoly.cpp  readpoly.h  tensor.cpp  tensor.h
minkowski_functions/: calculate.h  calculate_sphmink.cpp  calculate_w010.cpp  calculate_w020.cpp  calculate_w102.cpp  calculate_w103.cpp  calculate_w104.cpp  calculate_w110.cpp  calculate_w120.cpp  calculate_w202.cpp  calculate_w210.cpp  calculate_w220.cpp  calculate_w310.cpp  calculate_w320.cpp  calculate_wx00.cpp  calculate_wxxx.cpp  calculate_wxxx.h
print_functions/: print_CompWiseMatrixMinkValResultType.cpp  print_CompWiseScalarMinkValResultType.cpp  print_CompWiseVectorMinkValResultType.cpp  print_explanations.cpp  print_explanations.h  print_functions.h  write_CompWiseEigenSystemMinkValResultType_to_file.cpp  write_CompWiseMatrixMinkValResultType_to_file.cpp  write_CompWiseScalarMinkValResultType_to_file.cpp  write_CompWiseSphMinkMinkValResultType_to_file.cpp  write_CompWiseTensor3MinkValResultType_to_file.cpp  write_CompWiseTensor4MinkValResultType_to_file.cpp  write_CompWiseVectorMinkValResultType_to_file.cpp  write_functions.h  write_surface_props_to_file.cpp
test_suite/: catch.hpp  runtests  test_box.cpp  test_compare_functions.hpp  test_kugel.cpp  test_offreader.cpp  test_polyreader.cpp
(+69 files in other folders)
